# inventory_manager

./: .gitignore  CLAUDE.md
src/basics/: package.xml  setup.py
src/basics/basics/: publisher.py  subscriber.py
src/camera/: package.xml  setup.cfg  setup.py
src/camera/camera/: camera_publisher.py  color_detection.py  object_detection.py  picture_publisher.py
src/camera/config/: color_detection_colors.yaml  color_detection_general.yaml
src/camera/launch/: color_detection.launch.py
src/camera/models/: color_enum.py  item_color_data.py
src/inventory_manager/: CMakeLists.txt  package.xml
src/inventory_manager/description/: robot_core.xacro
src/inventory_manager/launch/: inventory_manager.launch.py  rsp.launch.py
src/message_interfaces/: CMakeLists.txt  package.xml
src/message_interfaces/msg/: ItemColor.msg  ItemDetection.msg
src/remote_interface/: CMakeLists.txt  package.xml
src/remote_interface/launch/: run_remote_interface.sh
src/remote_interface/remote_interface/: alexa_interface.py
src/vision_system/: package.xml  setup.py
src/vision_system/vision_system/: image_subsciber.py
